Prevent excess space on mobile

--- a/Main/main.css
+++ b/Main/main.css
@@ -1,3 +1,7 @@
+html,body{
+    overflow-x: hidden;
+}
+
 .fade-in {
     animation: fadeIn linear 1s;
 }
